--- a/index.html
+++ b/index.html
@@ -3,21 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>Turgomedia - Kreativ Byrå</title>
-    <meta name="description" content="Professionell videoproduktion, sociala medier, produktfotografering, webbdesign och SEO. Vi skapar visuellt innehåll som driver resultat för svenska företag." />
+
+    <!-- Primary Meta Tags -->
+    <title>Turgomedia - Kreativ Byrå för Videoproduktion, Webbdesign & SEO</title>
+    <meta name="description" content="Turgomedia är en kreativ byrå i Sverige som erbjuder professionell videoproduktion, sociala medier, produktfotografering, webbdesign och SEO för att stärka ditt varumärke online." />
+    <meta name="keywords" content="Turgomedia, videoproduktion Sverige, sociala medier byrå, produktfotografering Göteborg, webbdesign, SEO, digital marknadsföring, kreativ byrå" />
     <meta name="author" content="Turgomedia" />
 
-    <meta property="og:title" content="Turgomedia - Kreativ Produktion för Moderna Företag" />
-    <meta property="og:description" content="Professionell videoproduktion, sociala medier, produktfotografering, webbdesign och SEO. Vi skapar visuellt innehåll som driver resultat för svenska företag." />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="Turgomedia - Kreativ Byrå för Videoproduktion, Webbdesign & SEO" />
+    <meta property="og:description" content="Vi skapar visuellt innehåll och digitala lösningar som driver resultat för svenska företag. Upptäck vår expertis inom videoproduktion, sociala medier, webbdesign och SEO." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://turgomedia.se/" />
+    <meta property="og:image" content="https://turgomedia.se/og-image.png" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Turgomedia - Kreativ Byrå för Videoproduktion, Webbdesign & SEO" />
+    <meta name="twitter:description" content="Professionell videoproduktion, sociala medier, produktfotografering, webbdesign och SEO. Vi hjälper svenska företag att växa digitalt." />
+    <meta name="twitter:image" content="https://turgomedia.se/og-image.png" />
   </head>
 
   <body>
